// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`correct URL twice 1`] = `
"<div class=\\"jumbotron\\" id=\\"header\\">
    <h1 class=\\"display-5\\">RSS aggregator</h1>
    <div id=\\"formConteiner\\">
        <form class=\\"form-inline\\" id=\\"rssAddForm\\">
            <input type=\\"text\\" name=\\"link\\" class=\\"form-control\\" spellcheck=\\"false\\" placeholder=\\"RSS link\\">
            <button type=\\"submit\\" class=\\"btn\\" disabled=\\"true\\">Add</button>
            <div class=\\"invalid-feedback\\" id=\\"feedback\\"></div>
        </form>
    </div>
</div>
<div class=\\"container-fluid\\">
    <div class=\\"row\\">
        <div class=\\"col\\" id=\\"feeds\\">
            <div class=\\"list-group list-group-flush border-right\\">
                <div class=\\"list-group-item\\">
                    <h5 class=\\"mb-1\\">Lorem ipsum feed for an interval of 1 minutes</h5>
                    <p class=\\"mb-1\\">This is a constantly updating lorem ipsum feed</p>
                </div>
            </div>
        </div>
        <div class=\\"col\\" id=\\"posts\\">
            <ul class=\\"list-group list-group-flush overflow-auto\\">
                <li class=\\"list-group-item\\"><a href=\\"http://example.com/test/1584637680\\">Veniam magna occaecat qui irure mollit ea consequat ex pariatur.</a></li>
                <li class=\\"list-group-item\\"><a href=\\"http://example.com/test/1584637620\\">Do reprehenderit nostrud laborum deserunt aliqua aliqua fugiat magna labore ullamco.</a></li>
                <li class=\\"list-group-item\\"><a href=\\"http://example.com/test/1584637560\\">Qui amet et in pariatur et nostrud quis do id.</a></li>
                <li class=\\"list-group-item\\"><a href=\\"http://example.com/test/1584637500\\">Tempor magna non duis sint deserunt pariatur adipisicing elit.</a></li>
                <li class=\\"list-group-item\\"><a href=\\"http://example.com/test/1584637440\\">Incididunt consequat reprehenderit sit adipisicing voluptate sint consequat.</a></li>
                <li class=\\"list-group-item\\"><a href=\\"http://example.com/test/1584637380\\">Labore aliqua incididunt duis voluptate reprehenderit officia est mollit voluptate velit consectetur nulla velit.</a></li>
                <li class=\\"list-group-item\\"><a href=\\"http://example.com/test/1584637320\\">Voluptate deserunt elit consectetur tempor dolore ut dolor ex ullamco sunt aliquip esse sit.</a></li>
                <li class=\\"list-group-item\\"><a href=\\"http://example.com/test/1584637260\\">Eu adipisicing nostrud tempor voluptate commodo laboris eiusmod voluptate ex.</a></li>
                <li class=\\"list-group-item\\"><a href=\\"http://example.com/test/1584637200\\">Sint anim reprehenderit elit commodo.</a></li>
                <li class=\\"list-group-item\\"><a href=\\"http://example.com/test/1584637140\\">Ea officia veniam dolore adipisicing nulla esse aliqua.</a></li>
            </ul>
        </div>
    </div>
</div>"
`;

exports[`correct URL twice 2`] = `
"<div class=\\"jumbotron\\" id=\\"header\\">
    <h1 class=\\"display-5\\">RSS aggregator</h1>
    <div id=\\"formConteiner\\">
        <form class=\\"form-inline\\" id=\\"rssAddForm\\">
            <input type=\\"text\\" name=\\"link\\" class=\\"form-control is-invalid\\" spellcheck=\\"false\\" placeholder=\\"RSS link\\">
            <button type=\\"submit\\" class=\\"btn\\" disabled=\\"true\\">Add</button>
            <div class=\\"invalid-feedback\\" id=\\"feedback\\">this feed already was added</div>
        </form>
    </div>
</div>
<div class=\\"container-fluid\\">
    <div class=\\"row\\">
        <div class=\\"col\\" id=\\"feeds\\">
            <div class=\\"list-group list-group-flush border-right\\">
                <div class=\\"list-group-item\\">
                    <h5 class=\\"mb-1\\">Lorem ipsum feed for an interval of 1 minutes</h5>
                    <p class=\\"mb-1\\">This is a constantly updating lorem ipsum feed</p>
                </div>
            </div>
        </div>
        <div class=\\"col\\" id=\\"posts\\">
            <ul class=\\"list-group list-group-flush overflow-auto\\">
                <li class=\\"list-group-item\\"><a href=\\"http://example.com/test/1584637680\\">Veniam magna occaecat qui irure mollit ea consequat ex pariatur.</a></li>
                <li class=\\"list-group-item\\"><a href=\\"http://example.com/test/1584637620\\">Do reprehenderit nostrud laborum deserunt aliqua aliqua fugiat magna labore ullamco.</a></li>
                <li class=\\"list-group-item\\"><a href=\\"http://example.com/test/1584637560\\">Qui amet et in pariatur et nostrud quis do id.</a></li>
                <li class=\\"list-group-item\\"><a href=\\"http://example.com/test/1584637500\\">Tempor magna non duis sint deserunt pariatur adipisicing elit.</a></li>
                <li class=\\"list-group-item\\"><a href=\\"http://example.com/test/1584637440\\">Incididunt consequat reprehenderit sit adipisicing voluptate sint consequat.</a></li>
                <li class=\\"list-group-item\\"><a href=\\"http://example.com/test/1584637380\\">Labore aliqua incididunt duis voluptate reprehenderit officia est mollit voluptate velit consectetur nulla velit.</a></li>
                <li class=\\"list-group-item\\"><a href=\\"http://example.com/test/1584637320\\">Voluptate deserunt elit consectetur tempor dolore ut dolor ex ullamco sunt aliquip esse sit.</a></li>
                <li class=\\"list-group-item\\"><a href=\\"http://example.com/test/1584637260\\">Eu adipisicing nostrud tempor voluptate commodo laboris eiusmod voluptate ex.</a></li>
                <li class=\\"list-group-item\\"><a href=\\"http://example.com/test/1584637200\\">Sint anim reprehenderit elit commodo.</a></li>
                <li class=\\"list-group-item\\"><a href=\\"http://example.com/test/1584637140\\">Ea officia veniam dolore adipisicing nulla esse aliqua.</a></li>
            </ul>
        </div>
    </div>
</div>"
`;

exports[`invalid URL 1`] = `
"<div class=\\"jumbotron\\" id=\\"header\\">
    <h1 class=\\"display-5\\">RSS aggregator</h1>
    <div id=\\"formConteiner\\">
        <form class=\\"form-inline\\" id=\\"rssAddForm\\">
            <input type=\\"text\\" name=\\"link\\" class=\\"form-control is-invalid\\" spellcheck=\\"false\\" placeholder=\\"RSS link\\">
            <button type=\\"submit\\" class=\\"btn\\" disabled=\\"true\\">Add</button>
            <div class=\\"invalid-feedback\\" id=\\"feedback\\">URL is not correct</div>
        </form>
    </div>
</div>
<div class=\\"container-fluid\\">
    <div class=\\"row\\">
        <div class=\\"col\\" id=\\"feeds\\"></div>
        <div class=\\"col\\" id=\\"posts\\"></div>
    </div>
</div>"
`;

exports[`network error 1`] = `
"<div class=\\"jumbotron\\" id=\\"header\\">
    <h1 class=\\"display-5\\">RSS aggregator</h1>
    <div id=\\"formConteiner\\">
        <form class=\\"form-inline\\" id=\\"rssAddForm\\">
            <input type=\\"text\\" name=\\"link\\" class=\\"form-control\\" spellcheck=\\"false\\" placeholder=\\"RSS link\\">
            <button type=\\"submit\\" class=\\"btn\\">Add</button>
            <div class=\\"invalid-feedback\\" id=\\"feedback\\"></div>
        </form>
    </div>
</div>
<div class=\\"container-fluid\\">
    <div class=\\"row\\">
        <div class=\\"col\\" id=\\"feeds\\"></div>
        <div class=\\"col\\" id=\\"posts\\"></div>
    </div>
</div>"
`;

exports[`network error 2`] = `
"<div class=\\"jumbotron\\" id=\\"header\\">
    <h1 class=\\"display-5\\">RSS aggregator</h1>
    <div id=\\"formConteiner\\">
        <form class=\\"form-inline\\" id=\\"rssAddForm\\">
            <input type=\\"text\\" name=\\"link\\" class=\\"form-control is-invalid\\" spellcheck=\\"false\\" placeholder=\\"RSS link\\">
            <button type=\\"submit\\" class=\\"btn\\" disabled=\\"true\\">Add</button>
            <div class=\\"invalid-feedback\\" id=\\"feedback\\">URL is unreachable</div>
        </form>
    </div>
</div>
<div class=\\"container-fluid\\">
    <div class=\\"row\\">
        <div class=\\"col\\" id=\\"feeds\\"></div>
        <div class=\\"col\\" id=\\"posts\\"></div>
    </div>
</div>"
`;

exports[`no feed on URL 1`] = `
"<div class=\\"jumbotron\\" id=\\"header\\">
    <h1 class=\\"display-5\\">RSS aggregator</h1>
    <div id=\\"formConteiner\\">
        <form class=\\"form-inline\\" id=\\"rssAddForm\\">
            <input type=\\"text\\" name=\\"link\\" class=\\"form-control is-invalid\\" spellcheck=\\"false\\" placeholder=\\"RSS link\\">
            <button type=\\"submit\\" class=\\"btn\\" disabled=\\"true\\">Add</button>
            <div class=\\"invalid-feedback\\" id=\\"feedback\\">No feeds were found for this URL</div>
        </form>
    </div>
</div>
<div class=\\"container-fluid\\">
    <div class=\\"row\\">
        <div class=\\"col\\" id=\\"feeds\\"></div>
        <div class=\\"col\\" id=\\"posts\\"></div>
    </div>
</div>"
`;

exports[`uncorrect URL 1`] = `
"<div class=\\"jumbotron\\" id=\\"header\\">
    <h1 class=\\"display-5\\">RSS aggregator</h1>
    <div id=\\"formConteiner\\">
        <form class=\\"form-inline\\" id=\\"rssAddForm\\">
            <input type=\\"text\\" name=\\"link\\" class=\\"form-control\\" spellcheck=\\"false\\" placeholder=\\"RSS link\\">
            <button type=\\"submit\\" class=\\"btn\\">Add</button>
            <div class=\\"invalid-feedback\\" id=\\"feedback\\"></div>
        </form>
    </div>
</div>
<div class=\\"container-fluid\\">
    <div class=\\"row\\">
        <div class=\\"col\\" id=\\"feeds\\"></div>
        <div class=\\"col\\" id=\\"posts\\"></div>
    </div>
</div>"
`;

exports[`uncorrect URL 2`] = `
"<div class=\\"jumbotron\\" id=\\"header\\">
    <h1 class=\\"display-5\\">RSS aggregator</h1>
    <div id=\\"formConteiner\\">
        <form class=\\"form-inline\\" id=\\"rssAddForm\\">
            <input type=\\"text\\" name=\\"link\\" class=\\"form-control is-invalid\\" spellcheck=\\"false\\" placeholder=\\"RSS link\\">
            <button type=\\"submit\\" class=\\"btn\\" disabled=\\"true\\">Add</button>
            <div class=\\"invalid-feedback\\" id=\\"feedback\\">URL is unreachable</div>
        </form>
    </div>
</div>
<div class=\\"container-fluid\\">
    <div class=\\"row\\">
        <div class=\\"col\\" id=\\"feeds\\"></div>
        <div class=\\"col\\" id=\\"posts\\"></div>
    </div>
</div>"
`;
